// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlSwitch all options renders 1`] = `
<ControlWrapper
  id="testinput"
  themeControlWrapper="bg-red-light"
  validationError="oh no!"
>
  <label
    className="switch-container txt-s"
  >
    <input
      aria-invalid={true}
      autoFocus={true}
      checked={true}
      data-test="testinput-input"
      id="testinput"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="switch switch--red switch--dot-yellow"
    />
    <span
      className="color-white txt-m"
    >
      <span>
        All options
      </span>
      <span
        className="ml3 txt-normal"
      >
        (optional)
      </span>
    </span>
  </label>
</ControlWrapper>
`;

exports[`ControlSwitch basic onChange gets called with input id and value 1`] = `
<ControlWrapper
  id="testinput"
  themeControlWrapper=""
>
  <label
    className="switch-container "
  >
    <input
      checked={false}
      data-test="testinput-input"
      id="testinput"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="switch switch--s-label"
    />
    <span
      className="txt-s ml6"
    >
      Basic
    </span>
  </label>
</ControlWrapper>
`;

exports[`ControlSwitch basic renders 1`] = `
<ControlWrapper
  id="testinput"
  themeControlWrapper=""
>
  <label
    className="switch-container "
  >
    <input
      checked={false}
      data-test="testinput-input"
      id="testinput"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="switch switch--s-label"
    />
    <span
      className="txt-s ml6"
    >
      Basic
    </span>
  </label>
</ControlWrapper>
`;

exports[`ControlSwitch disabled renders 1`] = `
<ControlWrapper
  id="testinput"
  themeControlWrapper=""
>
  <label
    className="switch-container "
  >
    <input
      checked={false}
      data-test="testinput-input"
      disabled={true}
      id="testinput"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="switch switch--s-label"
    />
    <span
      className="txt-s ml6"
    >
      Disabled
    </span>
  </label>
</ControlWrapper>
`;
